--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/training-dev-fr/MongoDb/issues"
   },
-  "homepage": "https://github.com/training-dev-fr/MongoDb#readme"
+  "homepage": "https://github.com/training-dev-fr/MongoDb#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.1"
+  }
 }
