--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/training-dev-fr/MongoDb#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.5"
   }
 }
